# ConsoleMonitor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  todo.txt
docs/: doxygen.cfg
docs/html/: BaseCommand_8h_source.html  CommandFactory_8h_source.html  CommandHelp_8h_source.html  CommandList_8h_source.html  Copy_8h_source.html  Del_8h_source.html  Empty_8h_source.html  Enter_8h_source.html  Full_8h_source.html  Init_8h_source.html  MonitorHelp_8h_source.html  Monitor_8h_source.html  Move_8h_source.html  ParserException_8h_source.html  Parser_8h_source.html  Squeeze_8h_source.html  annotated.html  classBaseCommand-members.html  classBaseCommand.html  classBaseCommand__inherit__graph.map  classBaseCommand__inherit__graph.md5  classCommandFactory-members.html  classCommandFactory.html  classCommandHelp-members.html  classCommandHelp.html  classCopy-members.html  classCopy.html  classCopy__coll__graph.map  classCopy__inherit__graph.md5  classDel-members.html  classDel.html  classDel__inherit__graph.map  classDel__inherit__graph.md5  classEmpty-members.html  classEmpty.html  classEmpty__coll__graph.md5  classEmpty__inherit__graph.map  classEnter-members.html  classEnter.html  classEnter__coll__graph.map  (+50 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js
docs/latex/: annotated.tex  classBaseCommand.tex  classBaseCommand__inherit__graph.md5  classCommandFactory.tex  classCommandHelp.tex  classCopy.tex  classCopy__coll__graph.md5  classDel.tex  classDel__inherit__graph.md5  classEmpty.tex  classEmpty__coll__graph.md5  classEnter.tex  classEnter__inherit__graph.md5  classFull.tex  classFull__inherit__graph.md5  classInit.tex  classInit__coll__graph.md5  classMonitor.tex  classMonitorHelp.tex  classMove.tex  classMove__coll__graph.md5  classParser.tex  classParserException.tex  classParserException__coll__graph.md5  classSqueeze.tex  classSqueeze__coll__graph.md5  hierarchy.tex  md__media_Acer_Users_zavgm_Projects_monitor_README.tex  refman.tex
example/: CMakeLists.txt  example.cpp  main.cpp
example/myCommands/: CMakeLists.txt  Help.cpp  Help.h  Init.cpp  Init.h  MyCommandFactory.hpp
example/output/: exampleOutput.txt
monitor/: CMakeLists.txt  Monitor.cpp  Monitor.h  MonitorHelp.h  MonitorInput.cpp  MonitorInput.h  MonitorOutput.cpp
monitor/commands/: BaseCommand.cpp  BaseCommand.h  Blackhole.cpp  Blackhole.h  CMakeLists.txt  CommandFactory.cpp  CommandFactory.h  CommandHeaders.h  CommandHelp.cpp  CommandHelp.h  CommandList.h  Copy.cpp  Copy.h  Cp.cpp  Cp.h  Del.cpp  Del.h  Empty.cpp  Empty.h  Enter.cpp  Enter.h  Full.cpp  Full.h  Help.cpp  Help.h  Init.cpp  Init.h  Move.cpp  Move.h  Squeeze.cpp  Squeeze.h
monitor/commands/logic/: CMakeLists.txt
monitor/mycommands/: CMakeLists.txt  MyCommandFactory.cpp  MyCommandFactory.hpp
monitor/utils/: CMakeLists.txt  Parser.cpp  Parser.h  ParserException.h  utilFunctions.cpp  utilFunctions.h
src/: CMakeLists.txt  MonitorHelp.cpp  MonitorInput.cpp
src/CommonFunctions/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h
src/commands/: BaseCommand.h  CMakeLists.txt  CommandFactory.hpp  Parser.cpp
src/includes/: Monitor.h  MonitorHelp.h  MonitorOutput.h
src/utils/: CMakeLists.txt  utilFunctions.cpp  utilFunctions.h
tests/: CMakeLists.txt  baseCommandTest.cpp  commandFactoryTest.cpp  parserTest.cpp  utilityTest.cpp
tests/testCommands/: CMakeLists.txt  Help.h  Init.cpp  Init.h  TestCommandFactory.hpp
